JVM 非堆内存参数。